# exercism

./: .gitignore  README.md
javascript/reverse-string/: reverse-string.js
prolog/raindrops/: raindrops.pl
prolog/triangle/: triangle.pl
python/: pyproject.toml  tox.ini
python/all-your-base/: all_your_base.py
python/bob/: bob.py
python/dnd-character/: README.md  dnd_character.py
python/etl/: etl.py
python/isbn-verifier/: isbn_verifier.py
python/luhn/: luhn.py  performance.py
python/matching-brackets/: README.md  matching_brackets.py
python/pig-latin/: pig_latin.py
python/raindrops/: raindrops.py
python/rna-transcription/: rna_transcription.py
